objects/To_Do__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>To Do&apos;s</relationshipLabel>
        <relationshipName>To_Do_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>To Do&apos;s</relationshipLabel>
        <relationshipName>To_Do_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>To Do&apos;s</relationshipLabel>
        <relationshipName>To_Do_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>To Do&apos;s</relationshipLabel>
        <relationshipName>To_Do_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>To Do&apos;s</relationshipLabel>
        <relationshipName>To_Do_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>To Do</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Entity__c</columns>
        <columns>Lead__c</columns>
        <columns>Sales__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_To_Do</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>To Do</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To Do&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>